network-policy/network-police.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy
metadata:
  name: nginx-network-police
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress #política de entrada
    - Egress  #política de saída
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: ubuntu
      ports:
        - port: 80
          protocol: TCP
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: ubuntu
      ports:
        - port: 80
          protocol: TCP
